# quicktag

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.ps1  build.sh  config.example.yaml  config.smoke.yaml  pyproject.toml  quicktag.spec  tags.example.yaml
.cursor/rules/: post-build-input-copy.mdc  release-flow.mdc
.github/: dependabot.yml
.github/workflows/: build-windows.yml  build.yml  codeql.yml  release.yml  test.yml
assets/exiftool/: README.md
docs/: DIST_README_LINUX.md  DIST_README_WIN.md
hooks/: hook-onnxruntime.py  hook-transformers.py  metadata_packages.py
scripts/: build_windows.ps1  check_model_cached.py  download_onnx_model.py  export_onnx_model.py  generate_smoke_onnx_bundle.py
src/quicktag/: __init__.py  __main__.py  cli.py  config.py  exiftool_setup.py  image_io.py  metadata.py  model.py  model_onnx.py  onnx_tagger.py  paths.py  pipeline.py  scoring.py  tags.py
tests/: conftest.py  test_cli.py  test_config_tags.py  test_e2e_pipeline.py  test_exiftool_setup.py  test_fixtures.py  test_metadata.py  test_model.py  test_model_onnx.py  test_onnx_export.py  test_onnx_tagger.py  test_packaging.py  test_paths.py  test_scoring.py  test_smoke_bundle.py
tests/fixtures/onnx-smoke-bundle/: config.json  model.onnx  preprocessor_config.json  special_tokens_map.json  tokenizer.json  tokenizer_config.json
