[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quicktag"
version = "0.2.0"
description = "Batch image tagger using SigLIP2 vision-language encoder"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QuickTag Contributors" }]
dependencies = [
    "onnxruntime>=1.19.0",
    "tokenizers>=0.19.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "PyExifTool>=0.5.6",
    "huggingface_hub>=0.24.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]
onnx = [
    "onnx>=1.16.0",
]

[project.scripts]
quicktag = "quicktag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that download models or run heavy inference",
]
